<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbCadastro"
        android:title="@string/cadastro"
        android:background="@color/colorPrimary"
        android:theme="?attr/actionBarTheme"/>

    <ProgressBar
        android:id="@+id/pgCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/edtNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:hint="@string/nome_do_usuario"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:hint="@string/endereco_de_email"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white"
        android:hint="@string/senha_de_acesso"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/cadastrar"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"/>

</LinearLayout>