<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/pgLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"
        android:visibility="invisible"/>

    <ImageView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.13"
        android:src="@drawable/hero"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="360dp"
            android:adjustViewBounds="true"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/whats_logo"/>

        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:hint="@string/endereco_de_email"
            android:textColorHint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/white"
            android:hint="@string/senha_de_acesso"
            android:textColorHint="@color/white"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/entrar_app"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/cadastrar_se"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:text="@string/whatsapp_clone_2021"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>