<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".VerifiqueEmailActivity">

    <ImageView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.13"
        android:src="@drawable/hero"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        
        <ImageView
            android:layout_width="100dp"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:src="@drawable/email"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:text="leticia@test.com"/>

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/texto_confirmacao"/>

        <Button
            android:id="@+id/btnVerifique"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/verifiquei"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnReenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:padding="16dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/nao_recebi_o_email"
            android:textColor="@color/white"
            app:iconTint="#00FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="Sair"
        android:textColor="@color/white"
        app:iconTint="#00FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>