<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvVizualizarFoto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:cardElevation="1dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="400dp">

                <ImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_height="150dp"
                    android:src="@drawable/perfil"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_alignEnd="@+id/cvVizualizarFoto"
                android:id="@+id/cvAlterarFoto"
                android:layout_alignBottom="@+id/cvVizualizarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="300dp"
                android:elevation="1dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <ImageView
                    android:layout_margin="11dp"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/camera" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_usuario" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelNome"
                android:layout_toStartOf="@+id/imgEditarNome"
                android:textColor="@color/fontBlack"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgEditarNome"
                android:layout_centerVertical="true"
                android:src="@drawable/editar"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fontDisable"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelEmail"
                android:textColor="@color/fontBlack"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="17sp" />



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fontDisable"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha" />

            <TextView
                android:id="@+id/tvSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelSenha"
                android:layout_toStartOf="@+id/imgEditarSenha"
                android:textColor="@color/fontBlack"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="17sp"
                android:text="***************"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgEditarSenha"
                android:layout_centerVertical="true"
                android:src="@drawable/editar"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fontDisable"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/danger"
            android:text="@string/sair"
            android:padding="16dp"
            />



        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/excluir_conta"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:iconTint="#00FFFFFF" />

    </LinearLayout>



</ScrollView>